--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="https://scontent-ort2-2.xx.fbcdn.net/v/t31.0-8/22096060_1662442043818182_1739560635472035698_o.jpg?_nc_cat=0&oh=baa4823301ab575877cc8161907d1b01&oe=5C02AFD0" /></span>
+							<span class="image fit"><img src="https://tinyurl.com/yd5gqxrk" /></span>
 						</div>
 					</div>
 				</div>
