Fix tech skills section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">About</a></li>
 						<li><a href="#two" class="button scrolly">Skills</a></li>
-						<li><a href="#three" class="button scrolly">Projects</a></li>
+						<li><a href="#three" class="button scrolly">Apps</a></li>
 						<li><a href="#four" class="button scrolly">Contact</a></li>
 					</ul>
 				</div>
@@ -40,7 +40,7 @@
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<header class="major">
-								<h3><b>Hey, I'm Mealear (Meel-lee-uh) with a silent 'r' and a loud laugh!</b></h3>
+								<h3><b>Hi, I'm Mealear with a silent 'r' and a loud laugh!</b></h3>
 							</header>
               <p>
                 I am a full-stack software engineer with a love for architecting applications that can make an impact in millions of individuals' everyday lives, especially in the area of personal finance.
@@ -65,15 +65,12 @@
 					<div class="row 150%">
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
-								<h2>Skills</h2>
+								<h2>Technical Skills</h2>
 							</header>
-							<p><strong>Languages: </strong>Ruby, Javascript, HAML</p> 
-							<p><strong>Frameworks: </strong> Rails, Sinatra, ActiveRecord </p>
-							<p><strong>Front-End: </strong> HTML5, CSS3, Ajax, jQuery, Bootstrap 3 </p>
-							<p><strong>Libraries: </strong> jQuery, AJAX, REST APIs</p>
-							<p><strong>Testing: </strong> RSpec, Jasmine</p>
-							<p><strong>Databases: </strong> SQLite3, PostGreSQL </p>
-							<p><strong>Currently Tackling: </strong> React.js, Node.js</p>
+							<p><strong>Front End​:​ </strong>JavaScript (ES5 and ES6), HTML5, CSS3, React, AngularJS, Backbone, Python, Ruby, Bootstrap</p> 
+							<p><strong>Back End:​ ​ </strong> Node.js, Express, MongoDB, Mongoose, MySQL, RESTful API Development</p>
+							<p><strong>Testing/Deployment/Developer Tools:​ </strong> Jasmine, Mocha, Chai, Heroku, Git, npm, Webpack, Babel, TDD</p>
+							<p><strong>Other:​ </strong> ArcGIS, ArcPy, QGIS</p>
 						</div>
 					</div>
 				</div>
