Fix contact info

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Let's get in touch!</h2>
+						<h2>Lunch?</h2>
 					</header>
-					<p>  Coffee or boba? :) </p> 
+					<p>  Please email me for an updated resume and if you are interested in collaborating! </p> 
 					<ul class="actions uniform">
-						<li><a href="mailto:yip.natalie92@gmail.com" class="button special">Connect</a></li>
+						<li><a href="mailto:mealeark@yahoo.com" class="button special">Connect</a></li>
 					</ul>
 				</div>
 			</section>
