--- a/index.html
+++ b/index.html
@@ -85,42 +85,34 @@
 					<div class="row 150%">
 
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/TravelLingoes.png" alt="" /></span>
-							<h3>Travelingoes</h3>
-							<p> Travelingoes is a mobile app that translates foreign text from images to English in real time. </p>
+							<span class="image fit"><img src="https://image.ibb.co/hFDwVz/payme_home.png" alt="" /></span>
+							<h3>PayMe</h3>
+							<p>An app that will gather your research data needed for salary negotiation for you.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/natalieyip/Travelingoes" class="button">GitHub</a></li>
-								<li><a href="https://www.youtube.com/watch?v=QwpH1cT8epk" class="button">Demo</a></li>
+								<li><a href="https://github.com/team-alloy/payMe" class="button">GitHub</a></li>
+								<li><a href="https://www.youtube.com/watch?v=QwpH1cT8epk" class="button">Live</a></li>
 							</ul>
 						</div>
 
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/BOTG.png" alt="" /></span>
-							<h3>Boots on the Ground</h3>
-							<p>Boots on the Ground is the ultimate social networking platform for DevBootcamp alumni to connect and showcase their projects to potential employers.</p>
+							<span class="image fit"><img src="https://image.ibb.co/fKw5OK/onemanstreasure_home.png" alt="" /></span>
+							<h3>One Man's Treasure</h3>
+							<p>A platform for sellers to give away or trade away unwanted items.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/iand11/boot-on-the-ground" class="button">GitHub</a></li>
+                <li><a href="https://github.com/PantryPatron/one-mans-treasure" class="button">GitHub</a></li>
+                <li><a href="https://www.youtube.com/watch?v=QwpH1cT8epk" class="button">Live</a></li>
 							</ul>
 						</div>
 
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/FridgeRaiderScreenshot.png" alt="" /></span>
-							<h3>Fridge Raider</h3>
-							<p>Fridge Raider allows you to input various ingredients from your fridge to generate popular recipes.</p>
+							<span class="image fit"><img src="https://image.ibb.co/jc0tAz/pantrypatron_home.png" alt="" /></span>
+							<h3>PantryPatron</h3>
+							<p>A budget shopping app that helps organize and calculate your lists to keep within budget.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/natalieyip/Fridge_Raider" class="button">GitHub</a></li>
+								<li><a href="https://github.com/PantryPatron/pantry-patron" class="button">GitHub</a></li>
 								<li><a href="https://fridge-raider.herokuapp.com/" class="button">Live</a></li>
 							</ul>
 						</div>
-
-<!-- 						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Are You Board?</h3>
-							<p>Are You Board? is the web application for board game fanatics to connect with one another.</p>
-							<ul class="actions">
-								<li><a href="https://github.com/natalieyip/AreYouBoard" class="button">GitHub</a></li>
-							</ul>
-						</div> -->
 
 					</div>
 				</div>
