Make links of apps open in new tabs

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 							<h3>PayMe</h3>
 							<p>An app that will gather your research data needed for salary negotiation for you.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/team-alloy/payMe" class="button">GitHub</a></li>
-								<li><a href="https://www.youtube.com/watch?v=QwpH1cT8epk" class="button">Live</a></li>
+								<li><a href="https://github.com/team-alloy/payMe" target="_blank" class="button">GitHub</a></li>
+								<li><a href="https://nameless-falls-51335.herokuapp.com/login" target="_blank" class="button">Live</a></li>
 							</ul>
 						</div>
 
@@ -99,8 +99,8 @@
 							<h3>One Man's Treasure</h3>
 							<p>A platform for sellers to give away or trade away unwanted items.</p>
 							<ul class="actions">
-                <li><a href="https://github.com/PantryPatron/one-mans-treasure" class="button">GitHub</a></li>
-                <li><a href="https://www.youtube.com/watch?v=QwpH1cT8epk" class="button">Live</a></li>
+                <li><a href="https://github.com/PantryPatron/one-mans-treasure" target="_blank" class="button">GitHub</a></li>
+                <li><a href="https://one-mans-treasure.glitch.me/" target="_blank" class="button">Live</a></li>
 							</ul>
 						</div>
 
@@ -109,8 +109,8 @@
 							<h3>PantryPatron</h3>
 							<p>A budget shopping app that helps organize and calculate your lists to keep within budget.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/PantryPatron/pantry-patron" class="button">GitHub</a></li>
-								<li><a href="https://fridge-raider.herokuapp.com/" class="button">Live</a></li>
+								<li><a href="https://github.com/PantryPatron/pantry-patron" target="_blank" class="button">GitHub</a></li>
+								<li><a href="https://pantrypatron.glitch.me/login" target="_blank" class="button">Live</a></li>
 							</ul>
 						</div>
 
