--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
 -->
 <html>
 	<head>
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <link rel=”stylesheet” id=”font-awesome-css” href=”//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css” type=”text/css” media=”screen”>
     <meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Scripts -->
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/jquery.scrolly.min.js"></script>
+    <script src="./assets/js/skel.min.js"></script>
+    <script src="./assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="./assets/js/main.js"></script>
+
     <title>Mealear Khiev</title>
 	</head>
 	<body>
@@ -34,7 +40,7 @@
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- About -->
 			<section id="one" class="main style1">
 				<div class="container">
 					<div class="row 150%">
@@ -59,7 +65,7 @@
 				</div>
 			</section>
 
-		<!-- Two -->
+		<!-- Skills -->
 			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row 150%">
@@ -76,7 +82,7 @@
 				</div>
 			</section>
 
-		<!-- Three -->
+		<!-- Apps -->
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
@@ -118,7 +124,7 @@
 				</div>
 			</section>
 
-		<!-- Four -->
+		<!-- Contact -->
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
@@ -141,16 +147,12 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Mealear Khiev 2018</li>
-				</ul>
-			</section>
-
-		<!-- Scripts -->
-			<script src="./assets/js/jquery.min.js"></script>
-			<script src="./assets/js/jquery.scrolly.min.js"></script>
-			<script src="./assets/js/skel.min.js"></script>
-			<script src="./assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="./assets/js/main.js"></script>
-
+        </ul>
+        
+        <button onClick="window.scrollTo(0, 0);">
+          Back to Top
+        </button>
+      </section>
+      
 	</body>
 </html>
