--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<p>An app that will gather your research data needed for salary negotiation for you.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/team-alloy/payMe" target="_blank" class="button">GitHub</a></li>
-								<li><a href="https://nameless-falls-51335.herokuapp.com/login" target="_blank" class="button">Live</a></li>
+								<li><a href="https://nameless-falls-51335.herokuapp.com/login" target="_blank" class="button">Demo</a></li>
 							</ul>
 						</div>
 
@@ -106,7 +106,7 @@
 							<p>A platform for sellers to give away or trade away unwanted items.</p>
 							<ul class="actions">
                 <li><a href="https://github.com/PantryPatron/one-mans-treasure" target="_blank" class="button">GitHub</a></li>
-                <li><a href="https://one-mans-treasure.glitch.me/" target="_blank" class="button">Live</a></li>
+                <li><a href="https://one-mans-treasure.glitch.me/" target="_blank" class="button">Demo</a></li>
 							</ul>
 						</div>
 
@@ -116,7 +116,7 @@
 							<p>A budget shopping app that helps organize and calculate your lists to keep within budget.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/PantryPatron/pantry-patron" target="_blank" class="button">GitHub</a></li>
-								<li><a href="https://pantrypatron.glitch.me/login" target="_blank" class="button">Live</a></li>
+								<li><a href="https://pantrypatron.glitch.me/login" target="_blank" class="button">Demo</a></li>
 							</ul>
 						</div>
 
