--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="https://image.ibb.co/jc0tAz/pantrypatron_home.png" alt="" /></span>
 							<h3>PantryPatron</h3>
-							<p>A budget shopping app that helps organize and calculate your lists to keep within budget.</p>
+							<p>A budget shopping app that helps organize & calculate your lists to keep within budget.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/PantryPatron/pantry-patron" target="_blank" class="button">Code</a></li>
 								<li><a href="https://pantrypatron.glitch.me/login" target="_blank" class="button">Demo</a></li>
