Open a new tab when social media buttons are clicked

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-          <li><a href="https://www.linkedin.com/in/mealear-khiev" class="fab fa-linkedin-in"><span class="label"></span></a></li>
-          <li><a href="https://github.com/mealeark" class="fab fa-github"><span class="label"></span></a></li>
-          <li><a href="https://medium.com/@mealearkhiev" class="fab fa-medium-m"><span class="label"></span></a></li>
-          <li><a href="https://www.facebook.com/mealear.khiev" class="fab fa-facebook-f"><span class="label"></span></a></li>
+          <li><a href="https://www.linkedin.com/in/mealear-khiev" target="_blank" class="fab fa-linkedin-in"><span class="label"></span></a></li>
+          <li><a href="https://github.com/mealeark" target="_blank" class="fab fa-github"><span class="label"></span></a></li>
+          <li><a href="https://medium.com/@mealearkhiev" target="_blank" class="fab fa-medium-m"><span class="label"></span></a></li>
+          <li><a href="https://www.facebook.com/mealear.khiev" target="_blank" class="fab fa-facebook-f"><span class="label"></span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Mealear Khiev 2018</li>
